--- a/src/debug.ipynb
+++ b/src/debug.ipynb
@@ -6,21 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from time import sleep\n",
-    "\n",
-    "from selenium import webdriver\n",
-    "\n",
     "from MyBot.bot import Bot\n",
-    "from MyBot.utils import noise_generator, get_current_time\n",
-    "\n",
-    "URL = \"https://www.mousehuntgame.com\"\n",
-    "\n",
-    "driver = webdriver.Firefox()\n",
-    "driver.implicitly_wait(15)\n",
-    "driver.get(URL)\n",
-    "\n",
-    "\n",
-    "myBot = Bot(driver)"
+    "myBot = Bot()"
    ]
   },
   {
@@ -28,15 +15,6 @@
    "metadata": {},
    "source": [
     "Insert username and password below"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "myBot.sign_in(\"username\", \"password\")"
    ]
   }
  ],
